[package]
name = "solana-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
base64 = "0.22.1"
bs58 = "0.5.1"
dotenv = "0.15.0"
poem = "3.1.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
solana-program = "1.18.11"
solana-sdk = "1.18.11"
tokio = { version = "1", features = ["full"] }

spl-token = { version = "4.0", features = ["no-entrypoint"] }
